# Mpesa-API

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml  requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: python-app.yml
app/: __init__.py  config.py  utils.py
app/b2c/: views.py
app/c2b/: views.py
app/stk_push/: views.py
tests/: test_b2c.py  test_c2b.py  test_stk.py  test_utils.py
